k8s/01-deer-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deer-webui
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: deer-webui
  template:
    metadata:
      labels:
        app: deer-webui
    spec:
      containers:
      - name: deer-webui
        image: uhub.service.ucloud.cn/entropypool/deer-webui:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: deer-webui
  namespace: kube-system
spec:
  ports:
  - name: api
    port: 80
    targetPort: 80
  selector:
    app: deer-webui
