k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: deer-webui-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: deer-webui
    k8s.kuboard.cn/workload: deer-webui
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure

spec:
  rules:
    - host: www.npool.top
      http:
        paths:
          - path: /
            backend:
              serviceName: deer-webui
              servicePort: 80
